--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "main": "app.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "express-validator": "^6.9.2",
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "express-validator": "^6.10.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13",
+    "multer": "^1.4.2",
     "router": "^1.3.5"
   },
   "devDependencies": {},
