--- a/database/config.env
+++ b/database/config.env
@@ -2,7 +2,7 @@ NODE_ENV=development
 
 
 FILE_UPLOAD_PATH= ./public/uploads
-MAX_FILE_UPLOAD=1000000  #in Bytes
+MAX_FILE_UPLOAD=1000000000  #in Bytes
 
 
 
