--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "express-validator": "^6.10.0",
+    "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13",
     "multer": "^1.4.2",
     "router": "^1.3.5"
   },
   "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  
+    "scripts": {
+      "test": "jest"
+    },
+  
+ 
   "author": "Sudip Rai",
   "license": "ISC"
 }
